# CarScraper

./: .gitignore  .gitmessage  Architecture Final.txt  Architecture.txt  CMakeLists.txt  Etape.md  Etapes.txt  README.md  generate_tree.sh  projectTree.txt
src/: main.cpp
src/core/enum/: Co2Class.cpp  Co2Class.hpp  FuelType.cpp  FuelType.hpp  GearboxType.cpp  GearboxType.hpp
src/core/logger/: Logger.cpp  Logger.hpp
src/core/models/: Car.cpp  Car.hpp  Entity.cpp  Entity.hpp
src/core/utils/: Constant.hpp  Validation.cpp  Validation.hpp
src/io/ExcelReader/: ExcelReader.cpp  ExcelReader.hpp
src/io/HttpClient/: HttpClient.cpp  HttpClient.hpp
tests/: testAll.cpp  test_Entity.cpp  test_HttpClient.cpp  test_Validation.cpp
tests/base/: baseCar.cpp  baseEntity.cpp  baseLogger.cpp  baseValidation.cpp
tests/mono/: testCar.cpp  testEntity.cpp  testLogger.cpp  testValidation.cpp
